--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dino game</title>
+    <link rel="stylesheet" href="./styles/style.css"
 </head>
 <body>
+
+    <div class="game">
+        <div id="dino"></div>
+        <div id="cactus"></div>
+    </div>    
     
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
