--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dino game</title>
-    <link rel="stylesheet" href="./styles/style.css"
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-
+    
     <div class="game">
         <div id="dino"></div>
         <div id="cactus"></div>
-    </div>    
-    
+    </div>
+
     <script src="./scripts/index.js"></script>
 </body>
 </html>
